revert rosdep rule change

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2940,6 +2940,9 @@ python-sip:
   gentoo: [dev-python/sip]
   macports: [py27-sip]
   opensuse: [python-sip-devel]
+  osx:
+    homebrew:
+      packages: [sip]
   rhel: [sip-devel]
   slackware:
     slackpkg:
