rosdep: Add geolib to Artful, Debian Jessie and up

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -831,9 +831,14 @@ gdal-bin:
   gentoo: [sci-libs/gdal]
   ubuntu: [gdal-bin]
 geographiclib:
-  debian: [libgeographiclib-dev]
+  debian:
+    buster: [libgeographic-dev]
+    jessie: [libgeographic-dev]
+    stretch: [libgeographic-dev]
+    wheezy: [libgeographiclib-dev]
   fedora: [GeographicLib-devel]
   ubuntu:
+    artful: [libgeographic-dev]
     precise: [libgeographiclib-dev]
     quantal: [libgeographiclib-dev]
     raring: [libgeographiclib-dev]
