Add xenial key for libpqxx and libpqxx-dev (#15803)
* Add xenial key for libpqxx and libpqxx-dev

* Add deps for yakkety and artful

* Add key for Wily Werewolf

* Move `artful` to the front of the list

Instead of putting `artful` where it belongs in the order of Ubuntu releases, put it in alphabetical order where CI expects it.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2378,6 +2378,7 @@ libpqxx:
   fedora: [libpqxx]
   gentoo: [dev-libs/libpqxx]
   ubuntu:
+    artful: [libpqxx-4.0v5]
     lucid: [libpqxx-3.0]
     maverick: [libpqxx-3.0]
     natty: [libpqxx-3.0]
@@ -2389,11 +2390,16 @@ libpqxx:
     trusty: [libpqxx-4.0]
     utopic: [libpqxx-4.0]
     vivid: [libpqxx-4.0]
+    wily: [libpqxx-4.0]
+    xenial: [libpqxx-4.0]
+    yakkety: [libpqxx-4.0v5]
+    zesty: [libpqxx-4.0v5]
 libpqxx-dev:
   debian: [libpqxx-dev]
   fedora: [libpqxx-devel]
   gentoo: [dev-libs/libpqxx]
   ubuntu:
+    artful: [libpqxx-dev]
     lucid: [libpqxx3-dev]
     maverick: [libpqxx3-dev]
     natty: [libpqxx3-dev]
@@ -2405,6 +2411,10 @@ libpqxx-dev:
     trusty: [libpqxx-dev]
     utopic: [libpqxx-dev]
     vivid: [libpqxx-dev]
+    wily: [libpqxx-dev]
+    xenial: [libpqxx-dev]
+    yakkety: [libpqxx-dev]
+    zesty: [libpqxx-dev]
 libpt-dev:
   debian: [libpt-dev]
   fedora: [ptlib-devel]
