--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1212,17 +1212,7 @@ java:
 joystick:
   arch: [linuxconsole]
   debian: [joystick]
-  fedora:
-    '21': [linuxconsoletools]
-    '22': [linuxconsoletools]
-    '23': [linuxconsoletools]
-    '24': [linuxconsoletools]
-    '25': [linuxconsoletools]
-    '26': [linuxconsoletools]
-    beefy: [joystick]
-    heisenbug: [linuxconsoletools]
-    schrödinger’s: [linuxconsoletools]
-    spherical: [linuxconsoletools]
+  fedora: [linuxconsoletools]
   gentoo: [games-util/joystick]
   opensuse: [input-utils]
   rhel: [joystick]
