add joystick rule for fedora 25 and 26 (#15808)
* add joystick rule for fedora 25 and 26

* collapse fedora (dropping this key won't match fedora 17 and earlier)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1219,15 +1219,7 @@ java:
 joystick:
   arch: [linuxconsole]
   debian: [joystick]
-  fedora:
-    '21': [linuxconsoletools]
-    '22': [linuxconsoletools]
-    '23': [linuxconsoletools]
-    '24': [linuxconsoletools]
-    beefy: [joystick]
-    heisenbug: [linuxconsoletools]
-    schrödinger’s: [linuxconsoletools]
-    spherical: [linuxconsoletools]
+  fedora: [linuxconsoletools]
   gentoo: [games-util/joystick]
   opensuse: [input-utils]
   rhel: [joystick]
