--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2029,6 +2029,19 @@ python-planar-pip:
   ubuntu:
     pip:
       packages: [planar]
+python-plyfile-pip:
+  debian:
+    pip:
+      packages: [plyfile]
+  fedora:
+    pip:
+      packages: [plyfile]
+  osx:
+    pip:
+      packages: [plyfile]
+  ubuntu:
+    pip:
+      packages: [plyfile]
 python-progressbar:
   debian: [python-progressbar]
   fedora: [python-progressbar]
