Drop transitional sparsehash package (#15800)
* Drop transitional sparsehash package

* Add `sparsehash` keys for more Ubuntu versions

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4044,7 +4044,17 @@ sparsehash:
   debian: [libsparsehash-dev]
   fedora: [sparsehash-devel]
   gentoo: [dev-cpp/sparsehash]
-  ubuntu: [sparsehash]
+  ubuntu:
+    artful: [libsparsehash-dev]
+    precise: [sparsehash]
+    saucy: [sparsehash]
+    trusty: [sparsehash]
+    utopic: [sparsehash]
+    vivid: [libsparsehash-dev]
+    wily: [libsparsehash-dev]
+    xenial: [libsparsehash-dev]
+    yakkety: [libsparsehash-dev]
+    zesty: [libsparsehash-dev]
 speex:
   debian: [speex]
   fedora: [speex, speex-tools, speexdsp]
