--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -234,6 +234,16 @@ autopoint:
   debian: [autopoint]
   fedora: [gettext-devel]
   ubuntu: [autopoint]
+autossh:
+  arch: [autossh]
+  debian: [autossh]
+  fedora: [autosss]
+  freebsd: [autossh]
+  gentoo: [net-misc/autossh]
+  macports: [autossh]
+  opensuse: [autossh]
+  rhel: [autossh]
+  ubuntu: [autossh]
 avahi-daemon:
   arch: [avahi]
   debian: [avahi-daemon]
