Add rosdep rule for liburdfdom-tools
liburdfdom-tools is required for kinetic and lunar

--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -363,6 +363,10 @@ liburdfdom-headers-dev:
   osx:
     homebrew:
       packages: [urdfdom_headers]
+liburdfdom-tools:
+  osx:
+    homebrew:
+      packages: [urdfdom]
 libusb:
   osx:
     homebrew:
