Adding 'dyn_tune' and 'rqt_dyn_tune' to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1571,11 +1571,11 @@ repositories:
   dyn_tune:
     doc:
       type: git
-      url: https://github.com/mehdish89/dyn_tune
+      url: https://github.com/mehdish89/dyn_tune.git
       version: master
     source:
       type: git
-      url: https://github.com/mehdish89/dyn_tune
+      url: https://github.com/mehdish89/dyn_tune.git
       version: master
   dynamic_reconfigure:
     doc:
@@ -7546,11 +7546,11 @@ repositories:
   rqt_dyn_tune:
     doc:
       type: git
-      url: https://github.com/mehdish89/rqt_dyn_tune
+      url: https://github.com/mehdish89/rqt_dyn_tune.git
       version: master
     source:
       type: git
-      url: https://github.com/mehdish89/rqt_dyn_tune
+      url: https://github.com/mehdish89/rqt_dyn_tune.git
       version: master
   rqt_ez_publisher:
     doc:
