Adding 'dyn_tune' and 'rqt_dyn_tune' to documentation index for distro (#15818)
* Adding 'dyn_tune' and 'rqt_dyn_tune' to documentation index for distro

* Adding 'dyn_tune' and 'rqt_dyn_tune' to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1568,6 +1568,15 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/delftrobotics/dr_base-release.git
       version: 1.0.0-0
+  dyn_tune:
+    doc:
+      type: git
+      url: https://github.com/mehdish89/dyn_tune.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/mehdish89/dyn_tune.git
+      version: master
   dynamic_reconfigure:
     doc:
       type: git
@@ -7534,6 +7543,15 @@ repositories:
       url: https://github.com/ros-visualization/rqt_dep.git
       version: master
     status: maintained
+  rqt_dyn_tune:
+    doc:
+      type: git
+      url: https://github.com/mehdish89/rqt_dyn_tune.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/mehdish89/rqt_dyn_tune.git
+      version: master
   rqt_ez_publisher:
     doc:
       type: git
