Adding my_repo_name to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7545,6 +7545,8 @@ repositories:
     status: maintained
   rqt_dyn_tune:
     doc:
+      depends:
+      - dyn_tune
       type: git
       url: https://github.com/mehdish89/rqt_dyn_tune.git
       version: master
