--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2946,6 +2946,7 @@ liburdfdom-tools:
   debian: [liburdfdom-tools]
   fedora: [urdfdom]
   gentoo: [dev-libs/urdfdom]
+  slackware: [urdfdom]
   ubuntu: [liburdfdom-tools]
 libusb:
   arch: [libusb-compat]
