--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1523,7 +1523,9 @@ python-matplotlib:
       depends: [pkg-config, freetype, libpng12-dev]
       packages: [matplotlib]
   rhel: [python-matplotlib]
-  slackware: [matplotlib]
+  slackware:
+    pip:
+      packages: [matplotlib]
   ubuntu:
     lucid: [python-matplotlib]
     maverick: [python-matplotlib]
