adding ros1_template to indigo for source testing

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11265,6 +11265,66 @@ repositories:
       url: https://github.com/ros/ros.git
       version: indigo-devel
     status: maintained
+  ros1_template:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+  ros1_template_msgs:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+  ros1_cpptemplate:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+  ros1_ros_cpptemplate:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+  ros1_pytemplate:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+  ros1_pip_pytemplate:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
   rosR:
     doc:
       type: git
