added status. only one entry per repo/metapkg

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11275,56 +11275,7 @@ repositories:
       type: git
       url: https://github.com/pyros-dev/ros1_template.git
       version: master
-  ros1_template_msgs:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_cpptemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_ros_cpptemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_pytemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_pip_pytemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
+    status: maintained
   rosR:
     doc:
       type: git
