--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6800,7 +6800,7 @@ repositories:
       url: https://github.com/ros/ros.git
       version: kinetic-devel
     status: maintained
-ros1_template:
+  ros1_template:
     doc:
       type: git
       url: https://github.com/pyros-dev/ros1_template.git
@@ -6810,56 +6810,7 @@ ros1_template:
       type: git
       url: https://github.com/pyros-dev/ros1_template.git
       version: master
-  ros1_template_msgs:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_cpptemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_ros_cpptemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_pytemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-  ros1_pip_pytemplate:
-    doc:
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/pyros-dev/ros1_template.git
-      version: master
+    status: maintained
   ros_additive_manufacturing:
     doc:
       type: git
