myahrs_driver: 0.1.2-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4570,6 +4570,21 @@ repositories:
       url: https://github.com/ual-arm-ros-pkg/mvsim.git
       version: master
     status: maintained
+  myahrs_driver:
+    doc:
+      type: git
+      url: https://github.com/robotpilot/myahrs_driver.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/robotpilot/myahrs_driver-release.git
+      version: 0.1.2-0
+    source:
+      type: git
+      url: https://github.com/robotpilot/myahrs_driver.git
+      version: kinetic-devel
+    status: maintained
   nao_dcm_robot:
     doc:
       type: git
