adding ros1_template to indigo for source testing (#15823)
* adding ros1_template to indigo for source testing

* adding ros1_template to kinetic for source testing

* added status. only one entry per repo/metapkg

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6815,6 +6815,17 @@ repositories:
       url: https://github.com/ros/ros.git
       version: kinetic-devel
     status: maintained
+  ros1_template:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    status: maintained
   ros_additive_manufacturing:
     doc:
       type: git
