--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11265,6 +11265,17 @@ repositories:
       url: https://github.com/ros/ros.git
       version: indigo-devel
     status: maintained
+  ros1_template:
+    doc:
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/ros1_template.git
+      version: master
+    status: maintained
   rosR:
     doc:
       type: git
