use apt version of python-ujson for xenial and above

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3557,8 +3557,12 @@ python-ujson:
     pip:
       packages: [ujson]
   ubuntu:
-    pip:
-      packages: [ujson]
+    trusty:
+      pip:
+        packages: [ujson]
+    xenial: [python-ujson]
+    yakkety: [python-ujson]
+    zesty: [python-ujson]
 python-urlgrabber:
   arch:   [urlgrabber]
   debian: [python-urlgrabber]
