python-twisted-core on yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3503,6 +3503,8 @@ python-twisted-core:
     vivid: [python-twisted-core]
     wily: [python-twisted-core]
     xenial: [python-twisted-core]
+    yakkety: [python-twisted-core]
+    zesty: [python-twisted-core]
 python-twisted-web:
   arch: [python2-twisted]
   debian: [python-twisted-web]
