collapse all into one.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3489,22 +3489,7 @@ python-twisted-core:
   debian: [python-twisted-core]
   fedora: [python-twisted-core]
   gentoo: [dev-python/twisted-core]
-  ubuntu:
-    lucid: [python-twisted-core]
-    maverick: [python-twisted-core]
-    natty: [python-twisted-core]
-    oneiric: [python-twisted-core]
-    precise: [python-twisted-core]
-    quantal: [python-twisted-core]
-    raring: [python-twisted-core]
-    saucy: [python-twisted-core]
-    trusty: [python-twisted-core]
-    utopic: [python-twisted-core]
-    vivid: [python-twisted-core]
-    wily: [python-twisted-core]
-    xenial: [python-twisted-core]
-    yakkety: [python-twisted-core]
-    zesty: [python-twisted-core]
+  ubuntu: [python-twisted-core]
 python-twisted-web:
   arch: [python2-twisted]
   debian: [python-twisted-web]
