add saucy, wily rule

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3557,9 +3557,13 @@ python-ujson:
     pip:
       packages: [ujson]
   ubuntu:
+    saucy:
+      pip:
+        packages: [ujson]
     trusty:
       pip:
         packages: [ujson]
+    wily: [python-ujson]
     xenial: [python-ujson]
     yakkety: [python-ujson]
     zesty: [python-ujson]
