add a rule for utopic and vivid

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3563,6 +3563,12 @@ python-ujson:
     trusty:
       pip:
         packages: [ujson]
+    utopic:
+      pip:
+        packages: [ujson]
+    vivid:
+      pip:
+        packages: [ujson]
     wily: [python-ujson]
     xenial: [python-ujson]
     yakkety: [python-ujson]
