add a rule for artful

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3557,6 +3557,7 @@ python-ujson:
     pip:
       packages: [ujson]
   ubuntu:
+    artful: [python-ujson]
     saucy:
       pip:
         packages: [ujson]
