use apt version of python-ujson for xenial and above (#15844)
* use apt version of python-ujson for xenial and above

* add saucy, wily rule

* add a rule for utopic and vivid

* add a rule for artful

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3544,8 +3544,23 @@ python-ujson:
     pip:
       packages: [ujson]
   ubuntu:
-    pip:
-      packages: [ujson]
+    artful: [python-ujson]
+    saucy:
+      pip:
+        packages: [ujson]
+    trusty:
+      pip:
+        packages: [ujson]
+    utopic:
+      pip:
+        packages: [ujson]
+    vivid:
+      pip:
+        packages: [ujson]
+    wily: [python-ujson]
+    xenial: [python-ujson]
+    yakkety: [python-ujson]
+    zesty: [python-ujson]
 python-urlgrabber:
   arch:   [urlgrabber]
   debian: [python-urlgrabber]
