added openjdk-8 rosdep

--- a/rosdep/lcas.yaml
+++ b/rosdep/lcas.yaml
@@ -55,6 +55,8 @@ python-webpy:
   ubuntu: [python-webpy]
 rubygem-jekyll:
   ubuntu: [rubygem-jekyll]
+openjdk-8:
+  ubuntu: [openjdk-8-jdk]
 strands-morse-simulator:
   ubuntu:
     trusty: [strands-morse-simulator]
