added iliad_smp devel builds

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -67,6 +67,13 @@ repositories:
       url: https://gitsvn-nt.oru.se/iliad/software/private_sandbox.git
       version: master
     status: developed
+  iliad_smp:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://gitsvn-nt.oru.se/iliad/software/iliad_smp.git
+      version: master
+    status: developed
   lcas_teaching:
     release:
       packages:
