strands_perception_people to kinetic branch

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -464,7 +464,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/strands-project/strands_perception_people.git
-      version: indigo-devel
+      version: kinetic-devel
     status: developed
   strands_qsr_lib:
     source:
