strands_perception_people: 1.6.0-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -460,6 +460,27 @@ repositories:
       version: indigo-devel
     status: developed
   strands_perception_people:
+    release:
+      packages:
+      - bayes_people_tracker
+      - bayes_people_tracker_logging
+      - detector_msg_to_pose_array
+      - ground_plane_estimation
+      - human_trajectory
+      - mdl_people_tracker
+      - odometry_to_motion_matrix
+      - people_tracker_emulator
+      - people_tracker_filter
+      - perception_people_launch
+      - rwth_upper_body_skeleton_random_walk
+      - strands_perception_people
+      - upper_body_detector
+      - vision_people_logging
+      - visual_odometry
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/strands-project-releases/strands_perception_people.git
+      version: 1.6.0-0
     source:
       test_pull_requests: true
       type: git
