changed strands_hri to kinetic branch

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -402,7 +402,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/strands-project/strands_hri.git
-      version: hydro-devel
+      version: kinetic-devel
     status: developed
   strands_morse:
     release:
