libpybayes is now python-pybayes

--- a/rosdep/lcas.yaml
+++ b/rosdep/lcas.yaml
@@ -48,7 +48,7 @@ prism-robots:
     trusty: [prism-robots]
     xenial: [prism-robots]
 pybayes:
-  ubuntu: [libpybayes]
+  ubuntu: [python-pybayes]
 python-strands-requests:
   ubuntu: [python-strands-requests]
 python-webpy:
