igraph is generic for ubuntu

--- a/rosdep/lcas.yaml
+++ b/rosdep/lcas.yaml
@@ -22,8 +22,7 @@ ghmm:
     trusty: [libghmm-ne]
     xenial: [libghmm-ne]
 igraph:
-  ubuntu:
-    trusty: [python-igraph]
+  ubuntu: [python-igraph]
 jekyll-trusty:
   ubuntu:
     trusty: [jekyll]
