--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -488,6 +488,15 @@ repositories:
       version: kinetic-devel
     status: developed
   strands_qsr_lib:
+    release:
+      packages:
+      - qsr_lib
+      - qsr_prob_rep
+      - strands_qsr_lib
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/strands-project-releases/strands_qsr_lib.git
+      version: 0.4.0-0
     source:
       test_pull_requests: true
       type: git
