--- a/indigo/lcas-dist.yaml
+++ b/indigo/lcas-dist.yaml
@@ -41,6 +41,13 @@ repositories:
       url: https://github.com/LCAS/teaching.git
       version: indigo-devel
     status: developed
+  mongodb_store:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/strands-project/mongodb_store.git
+      version: kinetic-devel
+    status: developed
   oru_navigation:
     release:
       packages:
