--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3301,7 +3301,7 @@ log4cxx:
   macports: [ros-log4cxx]
   opensuse: [liblog4cxx-devel]
   rhel: [log4cxx-devel]
-  slackware: [log4cxx]
+  slackware: [apache-log4cxx]
   ubuntu: [liblog4cxx10-dev]
 lttng-modules:
   arch: [lttng-modules]
