catkin_grpc-release: 0.0.1-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1442,6 +1442,14 @@ repositories:
       url: https://github.com/ros/catkin.git
       version: indigo-devel
     status: maintained
+  catkin_grpc-release:
+    release:
+      packages:
+      - grpc
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/CogRobRelease/catkin_grpc-release.git
+      version: 0.0.1-0
   catkin_pip:
     doc:
       type: git
