cogrob_catkin_grpc: 0.0.1-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1964,6 +1964,23 @@ repositories:
       url: https://github.com/ipa320/cob_supported_robots.git
       version: indigo_dev
     status: developed
+  cogrob_catkin_grpc:
+    doc:
+      type: git
+      url: https://github.com/CogRobRelease/catkin_grpc-release.git
+      version: master
+    release:
+      packages:
+      - grpc
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/CogRobRelease/catkin_grpc-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/CogRob/catkin_grpc.git
+      version: master
+    status: developed
   collada_urdf:
     doc:
       type: git
