--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2965,6 +2965,12 @@ repositories:
       url: https://github.com/ccny-ros-pkg/imu_tools.git
       version: kinetic
     status: developed
+  industrial_calibration:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/industrial_calibration.git
+      version: kinetic-devel
+    status: maintained
   industrial_ci:
     doc:
       type: git
