airbus_coop: 0.0.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -159,6 +159,24 @@ repositories:
       url: https://github.com/RobotnikAutomation/agvs_sim.git
       version: indigo-devel
     status: maintained
+  airbus_coop:
+    release:
+      packages:
+      - agi_docgen
+      - airbus_coop
+      - cobot_gui
+      - plugin_log_manager
+      - plugin_node_manager
+      - plugin_rqt
+      - plugin_rviz
+      - pyqt_agi_extend
+      - ssm_core
+      - ssm_plugin
+      - ssm_tutorial
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ipa320/airbus_coop-release.git
+      version: 0.0.2-0
   alfred_bot:
     doc:
       type: git
