--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1967,7 +1967,7 @@ repositories:
   cogrob_catkin_grpc:
     doc:
       type: git
-      url: https://github.com/CogRobRelease/catkin_grpc-release.git
+      url: https://github.com/CogRob/catkin_grpc.git
       version: master
     release:
       packages:
