[dep][py] Add paramiko for Zesty. Collapse all Ubuntu entries as mapping seems to be the same for all distros (see also https://github.com/ros/rosdistro/pull/15873#issuecomment-327258574).
https://packages.ubuntu.com/zesty/python-paramiko

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -88,20 +88,7 @@ paramiko:
     pip:
       packages: [paramiko]
   rhel: [python-paramiko]
-  ubuntu:
-    lucid: [python-paramiko]
-    maverick: [python-paramiko]
-    natty: [python-paramiko]
-    oneiric: [python-paramiko]
-    precise: [python-paramiko]
-    quantal: [python-paramiko]
-    raring: [python-paramiko]
-    saucy: [python-paramiko]
-    trusty: [python-paramiko]
-    utopic: [python-paramiko]
-    vivid: [python-paramiko]
-    wily: [python-paramiko]
-    xenial: [python-paramiko]
+  ubuntu: [python-paramiko]
 pika:
   debian: [python-pika]
   gentoo: [dev-python/pika]
