--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1964,23 +1964,6 @@ repositories:
       url: https://github.com/ipa320/cob_supported_robots.git
       version: indigo_dev
     status: developed
-  cogrob_catkin_grpc:
-    doc:
-      type: git
-      url: https://github.com/CogRob/catkin_grpc.git
-      version: master
-    release:
-      packages:
-      - grpc
-      tags:
-        release: release/indigo/{package}/{version}
-      url: https://github.com/CogRobRelease/catkin_grpc-release.git
-      version: 0.0.1-0
-    source:
-      type: git
-      url: https://github.com/CogRob/catkin_grpc.git
-      version: master
-    status: developed
   collada_urdf:
     doc:
       type: git
@@ -3975,6 +3958,21 @@ repositories:
       url: https://github.com/g/grizzly_simulator.git
       version: indigo-devel
     status: maintained
+  grpc:
+    doc:
+      type: git
+      url: https://github.com/CogRob/catkin_grpc.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/CogRobRelease/catkin_grpc-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/CogRob/catkin_grpc.git
+      version: master
+    status: developed
   gscam:
     doc:
       type: git
