Add rosbag_metdata as python rosdep (#15865)
* Add rosbag_metdata as python rosdep

* remove gentoo entry for rosbag-metadata

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3846,6 +3846,16 @@ python3-setuptools:
   ubuntu: [python3-setuptools]
 python3-yaml:
   ubuntu: [python3-yaml]
+rosbag-metadata-pip:
+  debian:
+    pip:
+      packages: [rosbag-metadata]
+  fedora:
+    pip:
+      packages: [rosbag-metadata]
+  ubuntu:
+    pip:
+      packages: [rosbag-metadata]
 rpy2:
   arch: [python-rpy2]
   debian: [python-rpy2]
