--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8154,6 +8154,29 @@ repositories:
       url: https://github.com/start-jsk/rtmros_hironx.git
       version: indigo-devel
     status: developed
+  rtmros_nextage:
+    doc:
+      type: git
+      url: https://github.com/tork-a/rtmros_nextage.git
+      version: indigo-devel
+    release:
+      packages:
+      - nextage_calibration
+      - nextage_description
+      - nextage_gazebo
+      - nextage_ik_plugin
+      - nextage_moveit_config
+      - nextage_ros_bridge
+      - rtmros_nextage
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/rtmros_nextage-release.git
+      version: 0.8.0-0
+    source:
+      type: git
+      url: https://github.com/tork-a/rtmros_nextage.git
+      version: indigo-devel
+    status: maintained
   rtshell:
     release:
       tags:
