added coordination_oru_ros devel builds

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -29,6 +29,11 @@ repositories:
       url: https://github.com/LCAS/bayestracking.git
       version: master
     status: developed
+  coordination_oru_ros:
+    source:
+      type: git
+      url: https://github.com/FedericoPecora/coordination_oru_ros.git
+      version: master
   fremen:
     release:
       packages:
