strands_hri: 0.2.0-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -418,6 +418,25 @@ repositories:
       version: hydro-devel
     status: developed
   strands_hri:
+    release:
+      packages:
+      - han_action_dispatcher
+      - hrsi_launch
+      - hrsi_representation
+      - hrsi_state_prediction
+      - hrsi_velocity_costmaps
+      - strands_gazing
+      - strands_hri
+      - strands_hri_launch
+      - strands_human_aware_navigation
+      - strands_human_following
+      - strands_interaction_behaviours
+      - strands_simple_follow_me
+      - strands_visualise_speech
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/strands-project-releases/strands_hri.git
+      version: 0.2.0-0
     source:
       test_pull_requests: true
       type: git
