--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -598,11 +598,12 @@ repositories:
       packages:
       - bin_pose_emulator
       - bin_pose_msgs
+      - binpicking_simple_utils
       - binpicking_utils
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/durovsky/binpicking_utils-release.git
-      version: 0.1.3-0
+      version: 0.1.4-0
     source:
       type: git
       url: https://github.com/durovsky/binpicking_utils.git
