added rosdistro for xenial

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2684,6 +2684,7 @@ python-rosdistro:
     raring: [python-rosdistro]
     saucy: [python-rosdistro]
     trusty: [python-rosdistro]
+    xenial: [python-rosdistro]
     trusty_python3: [python3-rosdistro]
 python-rosinstall:
   arch: [python2-rosinstall]
