--- a/index.yaml
+++ b/index.yaml
@@ -3,8 +3,11 @@
 # see REP 143: http://ros.org/reps/rep-0143.html
 ---
 distributions:
-  r2b2:
-    distribution: [r2b2/distribution.yaml]
-    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b2-cache.yaml.gz
+#  r2b2:
+#    distribution: [r2b2/distribution.yaml]
+#    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b2-cache.yaml.gz
+  r2b3:
+    distribution: [r2b3/distribution.yaml]
+    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b3-cache.yaml.gz
 type: index
 version: 3
