--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -954,30 +954,30 @@ repositories:
   #      url: https://github.com/ros2/common_interfaces.git
   #      version: release-beta2
   #    status: maintained
-  #  gmock_vendor:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/gmock_vendor-release.git
-  #      version: 1.7.0-4
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/gmock_vendor.git
-  #      version: release-beta2
-  #    status: maintained
-  #  gtest_vendor:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/gtest_vendor-release.git
-  #      version: 1.7.0-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/gtest_vendor.git
-  #      version: release-beta2
-  #    status: maintained
+  gmock_vendor:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/gmock_vendor-release.git
+      version: 1.8.0-0
+    source:
+      type: git
+      url: https://github.com/ament/googletest.git
+      version: ros2
+    status: maintained
+  gtest_vendor:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/gtest_vendor-release.git
+      version: 1.8.0-0
+    source:
+      type: git
+      url: https://github.com/ament/googletest.git
+      version: ros2
+    status: maintained
   #  image_geometry:
   #    release:
   #      tags:
