--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -486,18 +486,18 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_package:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_package-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_package.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_package:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_package-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ament/ament_package.git
+      version: master
+    status: maintained
   #  ament_pep257:
   #    release:
   #      tags:
