--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -42,30 +42,30 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_auto:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_auto:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_clang_format:
   #    release:
   #      tags:
@@ -90,18 +90,18 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_core:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_core:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_cppcheck:
   #    release:
   #      tags:
@@ -126,78 +126,78 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_export_definitions:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_export_dependencies:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_export_include_directories:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_export_interfaces:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_export_libraries:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_export_link_flags:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_export_definitions:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_export_dependencies:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_export_include_directories:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_export_interfaces:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_export_libraries:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_export_link_flags:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_flake8:
   #    release:
   #      tags:
@@ -210,54 +210,54 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_gmock:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_gtest:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_include_directories:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_libraries:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_gmock:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_gtest:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_include_directories:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_libraries:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_lint_cmake:
   #    release:
   #      tags:
@@ -270,18 +270,18 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_nose:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_nose:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_pep257:
   #    release:
   #      tags:
@@ -318,18 +318,18 @@ repositories:
   #      url: https://github.com/ament/ament_lint.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_python:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_python:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_ros:
   #    release:
   #      tags:
@@ -342,30 +342,30 @@ repositories:
   #      url: https://github.com/ros2/ament_cmake_ros.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_cmake_target_dependencies:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_test:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_cmake.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_target_dependencies:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
+  ament_cmake_test:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_cmake.git
+      version: master
+    status: maintained
   #  ament_cmake_uncrustify:
   #    release:
   #      tags:
