--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1444,18 +1444,18 @@ repositories:
   #      url: https://github.com/ros2/ros2cli.git
   #      version: release-beta2
   #    status: maintained
-  #  ros_workspace:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros_workspace-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/nuclearsandwich/ros_workspace.git
-  #      version: release-beta2
-  #    status: maintained
+  ros_workspace:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros_workspace-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/nuclearsandwich/ros_workspace.git
+      version: master
+    status: maintained
   #  rosidl_cmake:
   #    release:
   #      tags:
