--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1924,18 +1924,18 @@ repositories:
   #      url: https://github.com/ros2/turtlebot2_demo.git
   #      version: release-beta2
   #    status: maintained
-  #  uncrustify:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/uncrustify-release
-  #      version: 0.61.20150413-3
-  #    source:
-  #      type: git/
-  #      url: https://github.com/ament/uncrustify.git
-  #      version: beta2-release
-  #    status: maintained
+  uncrustify:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/uncrustify-release
+      version: 0.61.20150413-4
+    source:
+      type: git/
+      url: https://github.com/ament/uncrustify.git
+      version: master
+    status: maintained
   #  urdf:
   #    release:
   #      tags:
