--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -426,30 +426,30 @@ repositories:
       url: https://github.com/ament/ament_lint.git
       version: master
     status: maintained
-  #  ament_index_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_index-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_index.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_index_python:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_index-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_index.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_index_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_index-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_index.git
+      version: master
+    status: maintained
+  ament_index_python:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_index-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_index.git
+      version: master
+    status: maintained
   ament_lint_auto:
     release:
       tags:
