repository_name: 0.1.1-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10436,6 +10436,19 @@ repositories:
       url: https://github.com/So-Cool/report_card.git
       version: master
     status: maintained
+  repository_name:
+    release:
+      packages:
+      - rapid_pbd_msgs
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/jstnhuang-release/rapid_pbd_msgs-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/jstnhuang/rapid_pbd_msgs.git
+      version: indigo-devel
+    status: developed
   resource_retriever:
     doc:
       type: git
