--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1110,18 +1110,18 @@ repositories:
   #      url: https://github.com/ros2/orocos_kinematics_dynamics.git
   #      version: beta2-release
   #    status: maintained
-  #  osrf_pycommon:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/osrf_pycommon-release.git
-  #      version: 0.1.3-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/osrf/osrf_pycommon.git
-  #      version: afa6d7a748e14a0fade9707a391389fa7a9ee68e
-  #    status: maintained
+  osrf_pycommon:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/osrf_pycommon-release.git
+      version: 0.1.3-3
+    source:
+      type: git
+      url: https://github.com/osrf/osrf_pycommon.git
+      version: master
+    status: maintained
   #  pcl_conversions:
   #    release:
   #      tags:
