--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10163,6 +10163,17 @@ repositories:
       url: https://github.com/felramfab/rangeonly_driver.git
       version: indigo-devel
     status: developed
+  rapid_pbd_msgs:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/jstnhuang-release/rapid_pbd_msgs-release.git
+      version: 0.1.1-1
+    source:
+      type: git
+      url: https://github.com/jstnhuang/rapid_pbd_msgs.git
+      version: indigo-devel
+    status: developed
   razer_hydra:
     release:
       tags:
