--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -534,18 +534,18 @@ repositories:
       url: https://github.com/ament/ament_lint.git
       version: master
     status: maintained
-  #  ament_tools:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_tools-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_tools.git
-  #      version: beta2-release
-  #    status: maintained
+  ament_tools:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_tools-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_tools.git
+      version: master
+    status: maintained
   ament_uncrustify:
     release:
       tags:
