rapid_pbd: 0.1.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10163,6 +10163,17 @@ repositories:
       url: https://github.com/felramfab/rangeonly_driver.git
       version: indigo-devel
     status: developed
+  rapid_pbd:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/jstnhuang-release/rapid_pbd-release.git
+      version: 0.1.2-0
+    source:
+      type: git
+      url: https://github.com/jstnhuang/rapid.git
+      version: indigo-devel
+    status: developed
   razer_hydra:
     release:
       tags:
