Fixed source URL.

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10171,7 +10171,7 @@ repositories:
       version: 0.1.2-0
     source:
       type: git
-      url: https://github.com/jstnhuang/rapid.git
+      url: https://github.com/jstnhuang/rapid_pbd.git
       version: indigo-devel
     status: developed
   rapid_pbd_msgs:
