--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -654,18 +654,18 @@ repositories:
   #      url: https://github.com/ros2/demos.git
   #      version: release-beta2
   #    status: maintained
-  #  console_bridge:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/console_bridge-release.git
-  #      version: 0.3.2-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/console_bridge.git
-  #      version: release-beta2
-  #    status: maintained
+  console_bridge:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/console_bridge-release.git
+      version: 0.3.2-6
+    source:
+      type: git
+      url: https://github.com/ros2/console_bridge.git
+      version: master
+    status: maintained
   #  demo_nodes_cpp:
   #    release:
   #      tags:
