--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -894,18 +894,18 @@ repositories:
   #      url: https://github.com/ros2/examples.git
   #      version: release-beta2
   #    status: maintained
-  #  fastcdr:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/fastcdr-release.git
-  #      version: 1.0.7-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/eProsima/Fast-CDR.git
-  #      version: affa48d511a36351ef24d40029db1e8217be86b1
-  #    status: maintained
+  fastcdr:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/fastcdr-release.git
+      version: 1.0.7-0
+    source:
+      type: git
+      url: https://github.com/eProsima/Fast-CDR.git
+      version: master
+    status: maintained
   #  fastrtps:
   #    release:
   #      tags:
