--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -906,18 +906,18 @@ repositories:
       url: https://github.com/eProsima/Fast-CDR.git
       version: master
     status: maintained
-  #  fastrtps:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/fastrtps-release.git
-  #      version: 1.5.0-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/eProsima/Fast-RTPS.git
-  #      version: b96e02861239a1ca3d1cb91a4760bba4c1df3498
-  #    status: maintained
+  fastrtps:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/fastrtps-release.git
+      version: 1.5.0-3
+    source:
+      type: git
+      url: https://github.com/eProsima/Fast-RTPS.git
+      version: master
+    status: maintained
   #  fastrtps_cmake_module:
   #    release:
   #      tags:
