--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1158,18 +1158,18 @@ repositories:
   #      url: https://github.com/ros2/demos.git
   #      version: release-beta2
   #    status: maintained
-  #  poco_vendor:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/poco_vendor-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/poco_vendor.git
-  #      version: release-beta2
-  #    status: maintained
+  poco_vendor:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/poco_vendor-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/poco_vendor.git
+      version: master
+    status: maintained
   #  python_cmake_module:
   #    release:
   #      tags:
