--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1792,18 +1792,18 @@ repositories:
   #      url: https://github.com/ros2/geometry2.git
   #      version: release-beta2
   #    status: maintained
-  #  tinyxml_vendor:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/tinyxml_vendor-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/tinyxml_vendor.git
-  #      version: release-beta2
-  #    status: maintained
+  tinyxml_vendor:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/tinyxml_vendor-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/tinyxml_vendor.git
+      version: master
+    status: maintained
   #  tlsf:
   #    release:
   #      tags:
