--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1254,18 +1254,18 @@ repositories:
   #      url: https://github.com/ros2/rclpy.git
   #      version: release-beta2
   #    status: maintained
-  #  rcutils:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rcutils-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rcutils.git
-  #      version: release-beta2
-  #    status: maintained
+  rcutils:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcutils-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcutils.git
+      version: master
+    status: maintained
   #  rmw:
   #    release:
   #      tags:
